--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shared_preferences: ^2.0.15
   internet_connection_checker: ^0.0.1+4
   flutter_bloc: ^8.0.1
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
